[FEAT] 추천 메뉴 설정
