# controller/menucontroller.go
@@ -3,18 +3,18 @@ package controller
 import (
 	"lecture/go-final/model"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
 
 type MenuInput struct {
-	Name      string `bson:"name" `
-	IsOrder   bool   `bson:"isorder" `
-	Quantity  int64  `bson:"quantity"`
-	Price     int64  `bson:"price"`
-	Origin    string `bson:"origin"`
-	Spicy     int64  `bson:"spicy"`
-	IsVisible bool   `bson:"isvisible"`
+	Name     string `bson:"name"`
+	IsOrder  bool   `bson:"isorder"`
+	Quantity int64  `bson:"quantity"`
+	Price    int64  `bson:"price"`
+	Origin   string `bson:"origin"`
+	Spicy    int64  `bson:"spicy"`
 }
 
 type Controller struct {
@@ -102,4 +102,20 @@ func (p *Controller) GetMenu(c *gin.Context) {
 // @Success 200 {object} Controller
 func (p *Controller) SortMenu(c *gin.Context) {
 	c.JSON(200, p.md.SortMenu())
+}
+
+// GetMenu godoc
+// @Summary call RecommendMenu, return ok by json.
+// @추천 메뉴 설정
+// @name RecommendMenu
+// @Accept  json
+// @Produce  json
+// @Param name query string true "name"
+// @Param recommend query bool true "recommend"
+// @Router /menu/admin [put]
+// @Success 200 {object} Controller
+func (p *Controller) RecommendMenu(c *gin.Context) {
+	name := c.Query("name")
+	recommend, _ := strconv.ParseBool(c.Query("recommend"))
+	c.JSON(200, p.md.RecommendMenu(name, recommend))
 }
