# docs/swagger.json
@@ -4,7 +4,81 @@
         "contact": {}
     },
     "paths": {
-        "/menu/deleteMenu": {
+        "/menu/": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "call GetMenu, return ok by json.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Controller"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "call UpdateMenu, return ok by json.",
+                "parameters": [
+                    {
+                        "description": "menuInput",
+                        "name": "menu",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.MenuInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Controller"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "DB에 menu 추가 []",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "call InsertMenu, return ok by json.",
+                "parameters": [
+                    {
+                        "description": "menuInput",
+                        "name": "menu",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.MenuInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Controller"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "DB에 menu 추가",
                 "consumes": [
@@ -35,44 +109,29 @@
                 }
             }
         },
-        "/menu/getMenu": {
-            "get": {
+        "/menu/admin": {
+            "put": {
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call GetMenu, return ok by json.",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.Controller"
-                        }
-                    }
-                }
-            }
-        },
-        "/menu/insertMenu": {
-            "post": {
-                "description": "DB에 menu 추가 []",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "call InsertMenu, return ok by json.",
+                "summary": "call RecommendMenu, return ok by json.",
                 "parameters": [
                     {
-                        "description": "menuInput",
-                        "name": "menu",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controller.MenuInput"
-                        }
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "recommend",
+                        "name": "recommend",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -85,7 +144,7 @@
                 }
             }
         },
-        "/menu/sortMenu": {
+        "/menu/grade": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -104,24 +163,30 @@
                 }
             }
         },
-        "/menu/updateMenu": {
-            "put": {
+        "/order/": {
+            "get": {
+                "description": "유저별 주문 내역 조회",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call UpdateMenu, return ok by json.",
+                "summary": "call GetOrderByUser, return ok by json.",
                 "parameters": [
                     {
-                        "description": "menuInput",
-                        "name": "menu",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controller.MenuInput"
-                        }
+                        "type": "string",
+                        "description": "Address",
+                        "name": "address",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Pnum",
+                        "name": "pnum",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -132,9 +197,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/order/addOrderMenu": {
+            },
             "put": {
                 "description": "유저 추가 주문",
                 "consumes": [
@@ -163,41 +226,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/order/getOrderByUser": {
-            "get": {
-                "description": "유저별 주문 내역 조회",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "call GetOrderByUser, return ok by json.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "address",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "pnum",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.Controller"
-                        }
-                    }
-                }
-            }
-        },
-        "/order/insertOrder": {
+            },
             "post": {
                 "description": "DB에 주문 추가",
                 "consumes": [
@@ -228,7 +257,7 @@
                 }
             }
         },
-        "/order/updateOrderState": {
+        "/order/state": {
             "put": {
                 "description": "주문 상태를 변경",
                 "consumes": [
@@ -259,7 +288,7 @@
                 }
             }
         },
-        "/review/getReview": {
+        "/review/reviewer": {
             "get": {
                 "description": "해당 메뉴의 평균 평점과 리뷰를 조회",
                 "consumes": [
@@ -286,9 +315,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/review/writeReview": {
+            },
             "put": {
                 "description": "메뉴의 평점 및 리뷰를 남김",
                 "consumes": [
@@ -368,7 +395,7 @@
                     "type": "integer"
                 },
                 "state": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "time": {
                     "type": "string"
@@ -417,6 +444,9 @@
                 },
                 "quantity": {
                     "type": "integer"
+                },
+                "recommend": {
+                    "type": "boolean"
                 },
                 "spicy": {
                     "type": "integer"
